CIV-9298 reduce major smells