@@ -91,7 +91,7 @@ public class HearingScheduledEventCallbackHandler extends CallbackHandler {
         return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
                         .append(" - ").append(location.getCourtAddress())
                         .append(" - ").append(location.getPostcode()).toString())
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private CallbackResponse checkFutureDate(CallbackParams callbackParams) {
